syntax="proto2";

package com.wirepas.proto.gateway;

import "wirepas_messaging/gateway/error.proto";
import "wirepas_messaging/nanopb/nanopb.proto";

// Global request header
// NB: Gateway id is not present in header as gateway will only subscribe to their id
message RequestHeader {
    // Unique request id
    required uint64 req_id = 1;
    // Sink id if relevant for request
    optional string sink_id = 2 [(nanopb).max_size = 128];
}

message ResponseHeader {
    // Same as in Request
    required uint64 req_id = 1;
    // Gw id that handled the request
    required string gw_id = 2 [(nanopb).max_size = 128];
    // Sink id if relevant for request
    optional string sink_id = 3 [(nanopb).max_size = 128];
    // Global result of request
    required ErrorCode res = 4;
}

message EventHeader {
    // Gw id that generated the event
    required string gw_id = 1 [(nanopb).max_size = 128];
    // Sink id if relevant for event
    optional string sink_id = 2 [(nanopb).max_size = 128];
    // Random event id to help duplicate event filtering
    required uint64 event_id = 3;
}

enum OnOffState {
    ON = 1;
    OFF = 2;
}

message FirmwareVersion {
    required uint32 major = 1;
    required uint32 minor = 2;
    required uint32 maint = 3;
    required uint32 dev = 4;
}